# GoGuLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
dependencies/: dependencies.cmake
include/: ArgParser.hpp  Debug.hpp  Exception.hpp  Function.hpp  GoGuLib.hpp
include/Core/: Debug.hpp  Exception.hpp  Function.hpp  Singleton.hpp
include/Logic/: ArgParser.hpp  File.hpp  Random.hpp
include/Network/: Request.hpp  Updater.hpp
src/: Debug.cpp  Process.cpp  String.cpp  Temp.cpp
src/Core/: Debug.cpp  Process.cpp  String.cpp  Temp.cpp
src/Logic/: File.cpp
src/Network/: Request.cpp  Updater.cpp
tests/: CMakeLists.txt  Tests.cpp
tests/functionnal/: CMakeLists.txt  Tests.cpp
tests/units/: CMakeLists.txt  Tests.cpp
